--- a/audio.html
+++ b/audio.html
@@ -129,7 +129,7 @@
 				
 			<article class="adjust-2">
 			<div class="padding-grid-2">
-			<h4 class="margin-none indent-top1"><strong>2011.</strong>Genres Remixes</h4>
+			<h4 class="margin-none indent-top1"><strong>2020.</strong>Genres Remixes</h4>
 			<p class="prev-indent-bot">Lorem ipsum dolor consctetur adipisicing elitdo eusmod tempor incididunt labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 			
 			<div class="wrapper">
@@ -263,8 +263,8 @@
 			<div class="footer-padding">
 			<div class="wrapper">
 		
-				<span class="footer-text"> <span>Superior &copy; 2011</span>
-		Free Html5 Templates by <a href="#" class="link">fahad chaudhry</a> 
+				<span class="footer-text"> <span>Superior &copy; 2020</span>
+		Html5 Templates by <a href="#" class="link">Aklyny</a> 
 		<br/>Responsive Themes by <a href="#" class="link">udemy</a></span>
 			
 			<ul class="list-services">
