--- a/contact.html
+++ b/contact.html
@@ -87,7 +87,7 @@
 			</div>
 				<dl class="list-4">
 					<dt>8901 ***** Road, <br>****, *** ****.</dt>
-					<dd>Telephone: +1 959 *** 6035</dd>
+					<dd>Telephone: 91+ 959 *** 6035</dd>
 					<dd>Email:<a href="#" class="link">mail@******.org</a></dd>
 				</dl>
 			</div>
@@ -111,8 +111,8 @@
 			<div class="footer-padding">
 			<div class="wrapper">
 		
-				<span class="footer-text"> <span>Superior &copy; 2011</span>
-		Free Html5 Templates by <a href="#" class="link">fahad chaudhry</a> 
+				<span class="footer-text"> <span>Superior &copy; 2020</span>
+		 Html5 Templates by <a href="#" class="link">Aklyny</a> 
 		<br/>Responsive Themes by <a href="#" class="link">udemy</a></span>
 			
 			<ul class="list-services">
