--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 				<strong class="text-2">nov</strong>
 				</time>
 				<div class="extra-wrap">
-				Rock Band is one of <a href="#" class="link">free website templates</a> created by Template Monster team.
+				Rock Band is one of <a href="#" class="link">free website templates</a> created by Aklyny
 			</div>
 			</div>
 			
@@ -70,7 +70,7 @@
 				<strong class="text-2">nov</strong>
 				</time>
 				<div class="extra-wrap">
-				Rock Band is one of <a href="#" class="link">free website templates</a> created by Template Monster team.
+				Rock Band is one of <a href="#" class="link">free website templates</a> created by Aklyny
 			</div>
 			</div>
 			
@@ -79,7 +79,7 @@
 				<strong class="text-2">nov</strong>
 				</time>
 				<div class="extra-wrap">
-				Rock Band is one of <a href="#" class="link">free website templates</a> created by Template Monster team.
+				Rock Band is one of <a href="#" class="link">free website templates</a> created by Aklyny
 			</div>
 			</div>
 			
@@ -95,7 +95,7 @@
 				<strong class="text-4">nov</strong>
 				</time>
 				<div class="extra-wrap">
-				<h4><a href="#">New York</a></h4>
+				<h4><a href="#">Chennai</a></h4>
 				Lorem ipsum dolor consctetur
 			</div>
 			</div>
@@ -105,7 +105,7 @@
 				<strong class="text-4">nov</strong>
 				</time>
 				<div class="extra-wrap">
-				<h4><a href="#">New York</a></h4>
+				<h4><a href="#">Mumbai</a></h4>
 				Lorem ipsum dolor consctetur
 			</div>
 			</div>
@@ -115,7 +115,7 @@
 				<strong class="text-4">nov</strong>
 				</time>
 				<div class="extra-wrap">
-				<h4><a href="#">New York</a></h4>
+				<h4><a href="#">Hydrabad</a></h4>
 				Lorem ipsum dolor consctetur
 			</div>
 			</div>
@@ -215,8 +215,8 @@ Iste natus error sit voluptatem accusantium doloremque laudantium, totam rem ape
 			<div class="footer-padding">
 			<div class="wrapper">
 		
-				<span class="footer-text"> <span>Superior &copy; 2011</span>
-		Free Html5 Templates by <a href="#" class="link">fahad chaudhry</a> 
+				<span class="footer-text"> <span>Superior &copy; 2020</span>
+		Created by Aklyny <a href="#" class="link">fahad chaudhry</a> 
 		<br/>Responsive Themes by <a href="#" class="link">udemy</a></span>
 			
 			<ul class="list-services">
