--- a/tour.html
+++ b/tour.html
@@ -62,7 +62,7 @@
 				<strong class="text-4">nov</strong>
 				</time>
 				<div class="extra-wrap">
-				<h4><a href="#">New York</a></h4>
+				<h4><a href="#">Chennai</a></h4>
 				Lorem ipsum dolor consctetur
 			</div>
 			</div>
@@ -72,7 +72,7 @@
 				<strong class="text-4">nov</strong>
 				</time>
 				<div class="extra-wrap">
-				<h4><a href="#">New York</a></h4>
+				<h4><a href="#">Mumbai</a></h4>
 				Lorem ipsum dolor consctetur
 			</div>
 			</div>
@@ -82,7 +82,7 @@
 				<strong class="text-4">nov</strong>
 				</time>
 				<div class="extra-wrap">
-				<h4><a href="#">New York</a></h4>
+				<h4><a href="#">Goa</a></h4>
 				Lorem ipsum dolor consctetur
 			</div>
 			</div>
@@ -92,7 +92,7 @@
 				<strong class="text-4">nov</strong>
 				</time>
 				<div class="extra-wrap">
-				<h4><a href="#">New York</a></h4>
+				<h4><a href="#">Hyderabad</a></h4>
 				Lorem ipsum dolor consctetur
 			</div>
 			</div>
@@ -102,7 +102,7 @@
 				<strong class="text-4">nov</strong>
 				</time>
 				<div class="extra-wrap">
-				<h4><a href="#">New York</a></h4>
+				<h4><a href="#">Delhi</a></h4>
 				Lorem ipsum dolor consctetur
 			</div>
 			</div>
@@ -112,7 +112,7 @@
 				<strong class="text-4">nov</strong>
 				</time>
 				<div class="extra-wrap">
-				<h4><a href="#">New York</a></h4>
+				<h4><a href="#">Kolkata</a></h4>
 				Lorem ipsum dolor consctetur
 			</div>
 			</div>
@@ -125,26 +125,26 @@
 			
 			<div class="margin-bot1">
 			<span class="add">Tickets:</span>
-			<a href="#" class="link">http://*******.org/Okedo </a>
+			<a href="#" class="link">http://aklyny.org/Okedo </a>
 			<br>
 			<span class="add">Telephone:</span>
-			<span class="add colr-1">+1 959 *** 6035</span>
+			<span class="add colr-1">91+ **** *** ***</span>
 			</div>
 			
 			<div class="margin-bot1">
 			<span class="add">Tickets:</span>
-			<a href="#" class="link">http://*******.org/Okedo </a>
+			<a href="#" class="link">http://aklyny.org/Okedo </a>
 			<br>
 			<span class="add">Telephone:</span>
-			<span class="add colr-1">+1 959 *** 6035</span>
+			<span class="add colr-1">91+ **** *** ***</span>
 			</div>
 			
 			<div class="margin-bot1">
 			<span class="add">Tickets:</span>
-			<a href="#" class="link">http://*******.org/Okedo </a>
+			<a href="#" class="link">http://aklyny.org/Okedo </a>
 			<br>
 			<span class="add">Telephone:</span>
-			<span class="add colr-1">+1 959 *** 6035</span>
+			<span class="add colr-1">91+ **** *** ***</span>
 			</div>
 			
 			<div class="margin-bot1">
@@ -210,8 +210,8 @@
 			<div class="footer-padding">
 			<div class="wrapper">
 		
-				<span class="footer-text"> <span>Superior &copy; 2011</span>
-		Free Html5 Templates by <a href="#" class="link">fahad chaudhry</a> 
+				<span class="footer-text"> <span>Superior &copy; 2020</span>
+		Website Templates by <a href="#" class="link">Aklyny</a> 
 		<br/>Responsive Themes by <a href="#" class="link">udemy</a></span>
 			
 			<ul class="list-services">
