--- a/video.html
+++ b/video.html
@@ -165,8 +165,8 @@
 			<div class="footer-padding">
 			<div class="wrapper">
 		
-				<span class="footer-text"> <span>Superior &copy; 2011</span>
-		Free Html5 Templates by <a href="#" class="link">fahad chaudhry</a> 
+				<span class="footer-text"> <span>Superior &copy; 2020</span>
+	 Html5 Templates by <a href="#" class="link">Aklyny</a> 
 		<br/>Responsive Themes by <a href="#" class="link">udemy</a></span>
 			
 			<ul class="list-services">
