--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ Iste natus error sit voluptatem accusantium doloremque laudantium, totam rem ape
 			<div class="wrapper">
 		
 				<span class="footer-text"> <span>Superior &copy; 2020</span>
-		Created by Aklyny <a href="#" class="link">fahad chaudhry</a> 
+		Created by <a href="#" class="link">Aklyny</a> 
 		<br/>Responsive Themes by <a href="#" class="link">udemy</a></span>
 			
 			<ul class="list-services">
